// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button rendering renders expected elements when both size is small and disabled is true 1`] = `
<span
  aria-disabled="true"
  className="Button Button--small Button--tertiary"
  id="test"
>
  Test
</span>
`;

exports[`Button rendering renders expected elements when className is set 1`] = `
<button
  className="Button Button--medium Button--tertiary testClass"
  id="test"
  type="submit"
>
  Test
</button>
`;

exports[`Button rendering renders expected elements when disabled is true 1`] = `
<span
  aria-disabled="true"
  className="Button Button--medium Button--tertiary"
  id="test"
>
  Test
</span>
`;

exports[`Button rendering renders expected elements when disabled is true and className is set 1`] = `
<span
  aria-disabled="true"
  className="Button Button--medium Button--tertiary testClass"
  id="test"
>
  Test
</span>
`;

exports[`Button rendering renders expected elements when disabled is true and icon is set 1`] = `
<span
  aria-disabled="true"
  className="Button Button--medium Button--tertiary"
  id="test"
>
  Test
  <SvgIcon
    className="Button__icon"
    icon={{}}
  />
</span>
`;

exports[`Button rendering renders expected elements when icon is set 1`] = `
<button
  className="Button Button--medium Button--tertiary"
  id="test"
  type="submit"
>
  Test
  <SvgIcon
    className="Button__icon"
    icon={{}}
  />
</button>
`;

exports[`Button rendering renders expected elements when onClick is not specified 1`] = `
<button
  className="Button Button--medium Button--tertiary"
  id="test"
  type="submit"
>
  Test
</button>
`;

exports[`Button rendering renders expected elements when onClick is specified 1`] = `
<button
  className="Button Button--medium Button--tertiary"
  id="test"
  onClick={[MockFunction]}
  type="button"
>
  Test
</button>
`;

exports[`Button rendering renders expected elements when size is small 1`] = `
<button
  className="Button Button--small Button--tertiary"
  id="test"
  type="submit"
>
  Test
</button>
`;

exports[`Button rendering renders expected elements when tooltipText is set 1`] = `
<button
  className="Button Button--medium Button--tertiary"
  id="test"
  type="submit"
>
  Test
</button>
`;

exports[`Button rendering renders expected elements when type is primary 1`] = `
<button
  className="Button Button--medium Button--primary"
  id="test"
  type="submit"
>
  Test
</button>
`;
